--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ python:
   - "3.7" 
 
 before_install:
-pip install --upgrade pip setuptools wheel
+  - pip install --upgrade pip setuptools wheel
 
 script: 
-python setup.py bdist_wheel
+  - python setup.py bdist_wheel
